# sntp-server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
coursework-docs/: client-state-diagram.ai  server-state-diagram.ai  testing-plan.pages  url.pages
src/: #sntp-client.c#  a.out  compiling_error.txt  sntp-client.c  sntp-server.c  test
src/client/: sntp-client.c  sntp-multicast-client.c
src/include/: ntp-structure.h  ntp-time.h  ntp-time.h.gch  sntp-packet.h  sntp-packet.h.gch  test  time-conversion.h  time-conversion.h.gch  timeconversion.c  timestamp.h  timestamp.h.gch
src/server/: dummy-client.c  sntp-multicast-server.c  sntp-server.c  test
src/tests/: CMakeLists.txt
src/tests/test-code/: CMakeLists.txt  checks.cpp
